# python-401-api-quickstart

./: .editorconfig  .gitignore  Dockerfile  README.md  api_tester.py  db.sqlite3  docker-compose.yml  heroku.yml  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_id.py
project/: .env.sample  settings.py  urls.py  views.py  wsgi.py
static/src/: output.css
staticfiles/src/: output.css
templates/: about.html  base.html  home.html  thing_create.html  thing_detail.html  thing_list.html
templates/registration/: login.html  signup.html
templates/things/: thing_create.html  thing_delete.html  thing_detail.html  thing_list.html  thing_update.html
things/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  urls_front.py  views.py  views_front.py
things/migrations/: 0001_initial.py
